[package]
name = "momento_proxy"
description = "a proxy to access Momento cache(s) over memcache and resp protocol"
authors = ["Momento <hello@momentohq.com>", "Brian Martin <brayniac@gmail.com>"]

version = "0.10.8"
edition = "2021"
homepage = "https://gomomento.com"
repository = "https://github.com/momentohq/momento-proxy"
license = "Apache-2.0"

[dependencies]
backtrace = "0.3.69"
bytes = "1.7.2"
clap = "4.4.6"
clocksource = "0.8.1"
common = { git = "https://github.com/pelikan-io/pelikan.git", rev = "4afdd11", package = "common" }
config = { git = "https://github.com/pelikan-io/pelikan.git", rev = "4afdd11", package = "config" }
crossbeam-channel = "0.5.15"
futures = "0.3.31"
libc = "0.2.149"
logger = { git = "https://github.com/pelikan-io/pelikan.git", rev = "4afdd11", package = "logger" }
metriken = "0.7.0"
moka = { version = "0.12", features = ["sync"] }
momento = "0.52.0"
pelikan-net = { git = "https://github.com/pelikan-io/pelikan.git", rev = "4afdd11", package = "pelikan-net", features = ["metrics"] }
protocol-admin = { git = "https://github.com/pelikan-io/pelikan.git", rev = "4afdd11", package = "protocol-admin" }
protocol-memcache = { git = "https://github.com/pelikan-io/pelikan.git", rev = "4afdd11", package = "protocol-memcache" }
protocol-resp = { git = "https://github.com/pelikan-io/pelikan.git", rev = "4afdd11", package = "protocol-resp" }
session = { git = "https://github.com/pelikan-io/pelikan.git", rev = "4afdd11", package = "session" }
serde = { version = "1.0" }
storage-types = { git = "https://github.com/pelikan-io/pelikan.git", rev = "4afdd11", package = "storage-types" }
tokio = { version = "1.43.1", features = ["full"] }
toml = { version = "0.8" }
thiserror = "1.0.49"
goodmetrics = "7.1.1"
tokio-rustls = "0.26.2"
webpki-roots = "1.0.0"
tonic = "0.13.1"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.dev]
debug = true
opt-level = 0
